test/1.4/errors/T_EERRSTMT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method empty() throws {}

inline method empty_inline(inline x) throws {}

method m5() {
    try {
        empty();
    } catch {
        /// ERROR EERRSTMT
        error;
    }
    try {
        empty_inline(0);
    } catch {
        // This changed since 1.2, SIMICS-9503
        /// ERROR EERRSTMT
        error;
    }
    if (false) {
        /// ERROR EERRSTMT
        error;
    }
    if (true) {
    } else {
        /// ERROR EERRSTMT
        error;
    }
}

// Groups and ports may not be named "bank" or "port" in devices
// since thy might otherwise cause Simics conf-object names to clash.
/// ERROR EERRSTMT
group bank;
/// ERROR EERRSTMT
subdevice port;
group g1 {
    // no error
    port bank;
    /// ERROR EERRSTMT
    subdevice port_ { param name = "port"; }
    // no error
    subdevice port { param name = "port_"; }
    group g {
        /// ERROR EERRSTMT
        group port;
    }
}
subdevice p1 {
    group g {
        /// ERROR EERRSTMT
        group port;
        /// ERROR EERRSTMT
        subdevice bank;
    }
}

// no error: name clash cannot happen since ports/banks can't have subobjects
port p2 {
    group port;
    group bank;
}
bank b {
    group port {
        group bank;
    }
}

method init() {
    m5();
}
